@@ -1,3 +1,14 @@
+spotpython-0.16.16:
+
+
+
+spotpython-0.16.15:
+
+- initialize_matrices:
+1. Simplified Penalty Calculation: Cached the variance calculation to a variable for clean reuse; reused it to set `pen_val` with efficient branching.
+2. Consistent Attribute Initialization: Set `dtype` for arrays like `self.one` for float precision; ensured all attributes are either properly initialized or set to `None`.
+
+
 spotpython-0.16.14:
 
 - spotpython.utils.aggregate.py: aggregate_mean_var() updated:
